src/yaml/trips-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      containers:
      - name: trips
        image: registryacs2871.azurecr.io/tripinsights-trips:1.0
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/secrets"
          readOnly: true
            # nodePublishSecretRef:
            #   name: SQL_USER  
        # volumeMounts:
        # - name: sqlpassword
        #   mountPath: "/secrets/SQL_PASSWORD"
        #   readOnly: true
        # - name: sqluser
        #   mountPath: "/secrets/SQL_USER"
        #   readOnly: true
        # - name: sqldb
        #   mountPath: "/secrets/SQL_DBNAME"
        #   readOnly: true
        # - name: sqlserver
        #   mountPath: "/secrets/SQL_SERVER"
        #   readOnly: true
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: tripinisghtskv
