src/yaml/user-java-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
    spec:
      containers:
      - name: user-java
        image: registryacs2871.azurecr.io/tripinsights/user-java:1.0
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
