src/yaml/poi-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: poi-svc
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: azure-poi
