src/yaml/trips-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trips-svc
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: trips
