src/yaml/tripviewer-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: tripviewer-svc
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: tripviewer
