src/yaml/user-java-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-java-svc
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: user-java
