src/yaml/userprofile-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: userprofile-svc
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: user-profile
