src/yaml/tripviewer-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tripviewer-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: tripviewer-svc
          servicePort: 80
      - path: /api/poi/healthcheck
        backend:
          serviceName: poi-svc
          servicePort: 80
      - path: /api/trips/healthcheck
        backend:
          serviceName: trips-svc
          servicePort: 80
