src/yaml/tripviewer-nginxingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tripviewer-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /api/user-java/(.*)
        pathType: Prefix
        backend:
          service:
            name: user-java-svc
            port:
              number: 80
      - path: /api/trips/(.*)
        pathType: Prefix
        backend:
          service:
            name: trips-svc
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: tripviewer-svc
            port:
              number: 80
      - path: /api/poi/(.*)
        pathType: Prefix
        backend:
          service:
            name: poi-svc
            port:
              number: 80
      - path: /api/user/(.*)
        pathType: Prefix
        backend:
          service:
            name: userprofile-svc
            port:
              number: 80
